--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next-themes": "^0.4.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
