--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.13.2",
     "next": "^16.0.10",
     "next-themes": "^0.4.6",
+    "nookies": "^2.5.2",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.69.0",
