--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "19.2.1",
     "react-hook-form": "^7.69.0",
     "react-icons": "^5.5.0",
-    "zod": "^4.2.1"
+    "zod": "^4.2.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/node": "^20",
