--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@tailwindcss/postcss": "^4.1.17",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
+    "js-cookie": "^3.0.5",
     "next": "^16.0.10",
     "next-themes": "^0.4.6",
-    "nookies": "^2.5.2",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.69.0",
@@ -25,6 +25,7 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
